--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <section class="container" id="content">
                 <div class="p-4 p-md-5 position-relative mb-4 rounded text-body-emphasis bg-body-secondary">
                     <div class="col-lg-6 px-0">
-                        <h1 class="display-4 fst-italic dance" id="info_title">Title of a longer featured blog post</h1>
+                        <h1 class="display-4 fst-italic dance" id="info_title">Title</h1>
                     </div>
                     <a class="btn btn-danger rounded-circle" id="searchYt" title="Youtube search" target="_blank"
                         href="https://www.youtube.com/results?search_query=hello">
@@ -95,9 +95,9 @@
                         <article class="blog-post rounded-2 border p-3">
                             <h2 class="display-5 link-body-emphasis mb-3 text-info">Some Facts About <span id="topicFact"></span></h2>
                             <ul id="facts">
-                                <li>First list item</li>
-                                <li>Second list item with a longer description</li>
-                                <li>Third list item to close it out</li>
+                                <li>First</li>
+                                <li>Second</li>
+                                <li>Third</li>
                             </ul>
                         </article>
                     </div>
