--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             As per my reseach
                         </h3>
 
-                        <article id="desc_topic" class="blog-post p-3 rounded-2" style="background: #3a3a3a;">
+                        <article id="desc_topic" class="blog-post p-3 rounded-2" style="background: var(--main-ab);">
 
                         </article>
 
